results/SpecGenBench/0-shot/log-UniqueNumNested-2023_11_29_02_04_57.txt
public class UniqueNumNested {

    //@ requires arr != null;
    //@ ensures \result >= -1;
    //@ ensures \result < arr.length;
    public static int uniqueNum(int[] arr) {
        //@ loop_invariant i >= 0 && i <= arr.length;
        //@ loop_invariant (\forall int k; k >= 0 && k < i; (\forall int j; j >= k + 1 && j < i; arr[k] != arr[j]));
        //@ decreases arr.length - i;
        for (int i = 0; i < arr.length; ++i) {
            //@ loop_invariant j >= i + 1 && j <= arr.length;
            //@ loop_invariant (\forall int k; k >= i + 1 && k < j; arr[i] != arr[k]);
            //@ decreases arr.length - j;
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            //@ assert j >= arr.length || arr[i] != arr[j];
            if(j == arr.length)
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            //@ assert j >= arr.length || arr[i] != arr[j];
                       ^
  symbol:   variable j
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            //@ assert j >= arr.length || arr[i] != arr[j];
                                                        ^
  symbol:   variable j
  location: class UniqueNumNested
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:19: error: cannot find symbol
            if(j == arr.length)
               ^
  symbol:   variable j
  location: class UniqueNumNested
3 errors

